fix search button alignment & ui color combination

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,34 @@
 body {
   overflow-x: hidden;
   font-family: "Montserrat", sans-serif;
+  padding: 1rem;
+}
+.gr-btn {
+  color: #fff;
+  display: inline-block;
+  padding: 6px 2rem;
+  margin-bottom: 0;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 1.42857143;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  -ms-touch-action: manipulation;
+  touch-action: manipulation;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  border: 1px solid transparent;
+  border-radius: 2rem;
+}
+.gr-btn-primary {
+  background: linear-gradient( 90deg, #686af6, #9a53ed);
+}
+.gr-btn-danger {
+  background: linear-gradient(90deg, #e83e8c, #f05743);
 }
 .search-field {
   border: none;
@@ -19,6 +47,9 @@ body {
   margin: auto;
   margin-top: 50px;
   border-right: none;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 .search-button {
   padding: 10px 50px;
@@ -28,6 +59,7 @@ body {
 #all-products {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  grid-gap: 10px;
   /* border: 1px solid black; */
   text-align: center;
   width: 100%;
@@ -36,13 +68,15 @@ body {
   justify-content: center;
 }
 .single-product {
-  padding: 10px;
-  transition: 0.6s;
+  padding: 8px;
+  border: 1px solid #9999;
+  border-radius: 10px;
+  transition: 0.3s;
+  box-shadow: 0 0 5px #90909090;
 }
 .single-product:hover {
-  box-shadow: 4px 4px 7px gray;
-  border-radius: 10px;
-  border: 1px solid cyan;
+  box-shadow: 4px 4px 7px #909090b0;
+  border: 1px solid #9999;
 }
 .product-image {
   width: 150px;
@@ -64,6 +98,7 @@ body {
   #all-products {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
+    padding: 1rem;
   }
   .cart {
     width: 300px;
@@ -82,5 +117,6 @@ body {
   #all-products {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
+    padding: .5rem;
   }
 }
